--- a/10-linear_models.Rmd
+++ b/10-linear_models.Rmd
@@ -218,7 +218,7 @@ knitr::include_graphics("docs/images/anova_to_regression.png")
 
 Регрессионный анализ строится на построении регрессионной прямой: любая прямая имеет вид $y = kx + b$, в регрессионном анализе это уравнение часто записывается как $y = b_0 + b_1x$. И задача регрессионного анализа -- это определение и тестирование коэффициентов $b_0$ и $b_1$ линейной регрессии.
 
-### Коэффициенты регрессии
+### Коэффициенты регрессии {#linreg_coef}
 
 Уравнение проведенной нами регрессионной прямой:
 <p align="center">$\hat y = b_o + b_1x$ </p>
@@ -294,7 +294,7 @@ knitr::include_graphics("docs/images/lr_sum_squares.png")
 <p align="center"> $R^2 = r_{xy}^2 = \frac{\text{cov(x, y)}}{sd_x sd_y} = \frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{(n-1)sd_x sd_y}$</p>
 
 
-### Регрессионный анализ (тестирование коэффициентов регрессии)
+### Регрессионный анализ (тестирование коэффициентов регрессии) {#linreg_null}
 
 Регрессионный анализ -- интересная штука, так как состоит из нескольких слоев, которые берут что-то от ANOVA, а что-то -- от корреляционногоо анализа. Тестирование значимости коэффициентов проводится на основании критерия, принадлежащего семейству Т-распределений, так же, как и корреляционный анализ. А тестирование всей модели целиком проводится с использованием F-критерия, так же, как и ANOVA. Нас в регрессионном анализе больше интересует тестирование значимости коэффициентов -- так как именно по коэффциентам, с которыми берутся факторы в модели, мы определяем, является влияние этих факторов значимым.
 
@@ -326,13 +326,13 @@ knitr::include_graphics("docs/images/lr_sum_squares.png")
 (ЗП и НП измерены в количественной или порядковой шкале)
 
 1. Распределение НП по ЗП линейно -- нет картины нелинейной взаимосвязи или скоплений данных в разных местах.
-2. Остатки (residuals) варьируются примерно одинаково вдоль всей прямой -- гомогенность (или гомоскедастичность, homoscedasticity) остатков. Проверяется тестом Левеня (Levene's Test of Homogeneity of Variance)
-3. Остатки (residuals) распределены нормально -- все то же самое, как [здесь](#param_nonparam), только для остатков (график плотности вероятности или QQ-plot)
-4. Для множественной линейной регрессии -- отсутствие мультиколлинеарности (сильной корреляции между независимыми переменными)
+2. Остатки (residuals) варьируются примерно одинаково вдоль всей прямой -- гомогенность (или гомоскедастичность, homoscedasticity) остатков. Проверяется тестом чаще всего по диагностичекой диаграмме рассеяния с распределением остатков (residuals) по предсказанным значениям (fitted values)
+3. Остатки (residuals) распределены нормально -- все то же самое, как [здесь](#param_nonparam), только для остатков (график плотности вероятности для остатков или QQ-plot)
+4. Для множественной линейной регрессии -- отсутствие мультиколлинеарности (сильной корреляции между независимыми переменными). Проверяется с помощью теста VIF ("показателя вздутия дисперсии")
 
-https://gallery.shinyapps.io/slr_diag/
+Примеры диагностических графиков для остатков: https://gallery.shinyapps.io/slr_diag/
 
-### Расчет регрессионного анализа
+### Расчет регрессионного анализа {#linreg_example}
 
 Когда мы проводим расчет регрессионного анализа, у нас в результате получается табличка вроде этой:
 
@@ -384,7 +384,7 @@ udemy_sample %>%
 
 Поэтому идею предсказать цену и рейтинг мы пока отбросим и перейдем к более прозаичной -- построим модель длительности курса от количества лекций.
 
-1) Гипотеза: длительность `content_length_min` определяется количество лекций `num_lectures`
+1) Гипотеза: длительность `content_length_min` определяется количеством лекций `num_lectures`
 
 <p align="center">`content_length_min` ~ `num_lectures`</p>
 
