--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -963,6 +963,7 @@ whr %>%
          "mean_position" = ifelse(Happiness_Score>= mean(Happiness_Score, na.rm = TRUE), "upper", "lower")) -> whr_tests_hw
 ```
 
+Результат этой предобраотк я так же с помощью `R` и функции `write_csv()` выгрузила в отдельный файл https://raw.githubusercontent.com/elenary/StatsForDA/main/whr_tests_hw.csv 
 
 До этого мы проверяли гипотезу о том, что Happiness Score различаеся в двух регионах: Западаной и Восточной и Центральной Европе. А если я хочу проверить, различаются ли статистически значимо уровень счастья в трех регионах -- Западаной и Восточной и Центральной Европе и в Латинском Америке? Снова обращаемся к изученным нами в прошлом семестре [статистическим критериям](#stats_criteria), всопминаем каринку с деревом выбора статистических тестов https://miro.com/app/board/uXjVOxmKhr8=/. Если у нас ЗП количественная, НП категориальная / категориальные, и нужно провести  3 сравнения и больше -- то мы переходим от т-теста к [ANOVA (дисперсионному анализу)](#anova).
 
@@ -1165,6 +1166,26 @@ whr_tests_hw %>%
   ezANOVA(., dv = Life_Ladder, wid = Country, within = as.factor(Year))
 ```
 
+### Решейпинг {#reshaping}
+
+Бывает так, что для тестов с повторными измерениями некоторые функции принимают на вход данные в другом формате. Например, ровно так произошло в Jamovi. Обратите внимание, как данные о повторных измерениях у нас выглядят сейчас: у нас есть колонка `Year`, в которой перечислены года, и колонка `Life_Ladder`, в которой перечислены соответствующие этим годам значения. 
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>% 
+  select(Country, Year, Life_Ladder) %>% 
+  filter(Year>2010) %>% 
+  head() #выводит заголовок таблички, первые 10 строк
+```
+  
+Такой формат данных называется *длинным* (без шуток, так и называется!), потому что данные вытянуты в длину, вместо того, чтобы каждая строка состояла из уникальных данных (обратите внимание на колонку `Country` -- там повторяющие значения, потому что у нас много замеров в разные года для каждой страны). Иногда бывает нужно перевести данные в *широкий* формат -- чтобы значения в строчках не повторялись, но вместо двух колонок у нас появилась по колонке с измерениями `Life_Ladder` за каждый год. Такое преобразование называется решейпинг данных, как бы изменение их формы. Преобразовать вид данных из длинного в широкий формат или обратно можно с помощью функций pivot_wider pivot_longer. В Jamovi решейпинг, к сожалению, не реализован.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>% 
+  select(Country, Year, Life_Ladder) %>% 
+  filter(Year>2010) %>% 
+  pivot_wider(names_from = Year, values_from = Life_Ladder) %>% 
+  head()
+```
 
 ## Задания после семинара 6 {#tasks_sem6}
 
@@ -1175,14 +1196,169 @@ whr_tests_hw %>%
 3. Выберете подходящие переменные, сформулируйте осмысленную гипотезу и проверьте ее с помощью ANOVA c повторными измерениями. Проинтерпретируйте результаты: подвердилась ли гипотеза?
 4. Проведите те же самые проверки гипотез 1-3 с помощью линейного регрессионного анализа.
 
-## Линейный регрессионный анализ {#linreg}
+## Линейный регрессионный анализ {#lin_reg}
 
+Теперь перейдем к однму из самых важных методов в анализе данных, в том числе, психологических -- [линейной регрессии](#linreg). Первым делом нужно вспомнить, когда используется этот метод -- а используется он, когда и ЗП, и НП -- количественные. Когда мы говорили про корреляции, мы обсуждали, что это упрощенный вариант линейной регрессии, когда у нас только одна НП. Для однй НП мы можем сделать и корреляционный тест, и регрессионный анализ, а вот когда количественных НП две и более -- уже тольк регрессионный. Также мы обсуждали, что ANOVA -- на самом деле тоже подвид линейной регрессии, если уходить от количественных НП к категориальным! Но обо всем по порядку, начнем с количественных НП, более классического случая линейной регрессии.
+
+Прежде, чем строить регрессионную модель, нам нужно проверить [допущения для линейной регрессии](#assumptions_linreg)
+
+Обратите внимание -- нас тут уже не очень интересует, насколько нормально распределена ЗП! В этом сила линейной реггрессии, что она устойчива к ЗП разных распределений. Но другое допущение, касающееся распределения данных по ЗП -- это линейность между НП и ЗП, на которых мы хотим строить модель, нужно убедиться, что между ними есть линейная связь (а не дырка от бублика или сущность в виде гномика). Это первое допущение.
+
+Я выбрала для анализа гипотезу о том, что уровень счастья по субъективному расположению на лестнице `Life_Ladder`, зависит от параметров `Log_GDP_per_capita` (покупательская способность, ВВП на душу населения), `Social_support`, `Freedom_to_make_life_choices`, `Perceptions_of_corruption.`
+
+Проверим допущение о линейной связи между ЗП Life_Ladder и нескольких потенциальных переменных, которые я выбрала для анализа.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>% 
+  ggplot(aes(x = Log_GDP_per_capita, y = Life_Ladder)) +
+  geom_point(color = "#355C7D", size = 1) +
+  theme_minimal()
+
+whr_tests_hw %>% 
+  ggplot(aes(x = Social_support, y = Life_Ladder)) +
+  geom_point(color = "#355C7D", size = 1) +
+  theme_minimal()
+
+whr_tests_hw %>% 
+  ggplot(aes(x = Freedom_to_make_life_choices, y = Life_Ladder)) +
+  geom_point(color = "#355C7D", size = 1) +
+  theme_minimal()
+
+whr_tests_hw %>% 
+  ggplot(aes(x = Perceptions_of_corruption, y = Life_Ladder)) +
+  geom_point(color = "#355C7D", size = 1) +
+  theme_minimal()
+```
+
+Вижу, что переменная Log_GDP_per_capita показывает очень хорошую линейную связь, близко к этому переменная Freedom_to_make_life_choices. Переменная Social_support мне не очень нравится, но я могу попробовать ее преобразовать в процессе, а вот переменная Perceptions_of_corruption выглядит откровенно плохо, возьму ее в качестве антипримера.
+
+### Линейная регрессия с одним предиктором (фактором)
+
+Построю для начала модель с одним факторов -- Log_GDP_per_capita. Модель строится помощью функции lm(), чтобы вывести основную информацию о модели нужно вывести summary(). Еще, кстати, можно вывести эти результаты сразу в виде ANOVA -- это все потому, что, по сути, это подвид той же линейной регрессии, и если нам мила сердцу табличка вида ANOVA, можно ее получить просто применив функции к модели anova()
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>% 
+  lm(Life_Ladder ~ Log_GDP_per_capita, .) -> lm_model1
+# напомнию, что точка означает, что именно в этом месте нужно передать в функцию данные
+# полученные на предыдущей строчке пайпа. Посмотрите структуру функции lm() в справке, 
+# на этом находится аргумент `data = `
+lm_model1
+summary(lm_model1)
+anova(lm_model1)
+# options(scipen = 999) функция, которая отключает нотацию записи чисел через экспоненту
+```
+
+В целом, мы можем уже начать интерпретировать результаты модели, но пока рановато -- сначаоа нужно убедиться в равенстве дисперсий остатков, то есть выполнении допущения о *гомоскедастичности* (гомогенности) дисперсий. Это проще всего проверить, выведя первый из четырех график, которые выводятся, если передать линейную модель в базовую функцию plot()
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+plot(lm_model1, 1)
+```
+
+Можем сделать график покрасивее через ggplot(). Для этого воспользуемся тем, что результат выполнения lm() -- это список, в котором содержится много разныз данных, в том числе, и остатки модели, и предсказанные значения отдельно.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+lm_model1$residuals
+lm_model1$fitted.values
+```
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+ggplot(lm_model1, aes(x = lm_model1$fitted.values, y = lm_model1$residuals)) +
+  geom_point(color = "#355C7D", size = 1) +
+  theme_minimal()
+```
+Вспомним примеры диагностических графиков, которые мы разбирали в прошлом семестре Примеры диагностических графиков для остатков: https://gallery.shinyapps.io/slr_diag/ Хорошим счтается график, если при движении слева на право все точки распределены примерно равномерно. А вот есть у нас вылез веник, что с одной стороны данные скукожились в одну точку, а дальше пошли расходиться веником -- это означает, что в данных наблюдается *гетероскедастичность*, они не однородны, и результаты такой модели будут не очень достоверны. В нашем случае графико выглядит хорошо и проходит проверку.
+
+А теперь давайте возьмем антипример и посмотрим, что будет с распределением остатков.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>% 
+  lm(Life_Ladder ~ Perceptions_of_corruption, .) -> lm_model2_anti
+plot(lm_model2_anti, 1)
+```
+
+Тут что-то пошло не так, поэтому опираться на такую модель мы бы не стали.
+
+Следующее допущение -- остатки должны быть нормально распределены. Да, мы не проверяем на нормальность распределения ЗП, но вот остатки нужно проверить -- иначе мы не сможем провести линия с расчетом метода нименьших квадратов, то есть пытаясь приблизиться ко всем нашим точкам сразу. Проверим это допущения, выведя второй график стандартной функции plot()
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+plot(lm_model1, 2)
+```
+Или, как мы уже строили красивые графики для проверки нормальнсти через ggplot
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+ggplot(data = lm_model1, aes(x = lm_model1$residuals)) +
+  geom_density(color = "#355C7D") +
+  theme_minimal()
+
+ggplot(data = lm_model1, aes(sample = lm_model1$residuals)) +
+  stat_qq(color = "#355C7D") +
+  geom_qq_line() +
+  theme_minimal()
+```
+
+И так, мы соблюли все допущения для модели с одним предиктором! У нас осталось только допущения отсутствия мультиколлинеарности, но оно не применимо на модели с одним предиктором.
+
+Теперь давайте еще раз посмотрим на результаты модели и вспомним, [как их интерпретировать](#linreg_example). Ключевое, что нас интересует -- это [коэффициенты линейной регрессии](#linreg_coef), $b_0$, интерцепт, место пересечения регрессионной прямой с осью y, и $b_1$, слоуп, угол наклона прямой -- так как [нулевая гипотеза для линейной регрессии](#linreg_null) заключается в равенстве их нулю. Еще одна не менее важная штука -- $R^2$, [коэффициент детерминации и процент объясненной дисперсии](#rsquared).
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+lm_model1
+summary(lm_model1)
+```
+
+Как обычно, смотрим на p-value у каждого коэффициента (и еще можем посмотреть на p-value всей модели: тут та же итория, как и с ANOVA -- вся модель значима, когда значим хотя бы один из коэффициентов, и не значима, когда все коэффициенты не отличаются статистически значимо от нуля). Если коэффициент значим, значит, мы можем сказать, что он значимо вкладывается в объяснение дисперсии. $b_0$, интерцепт, значимо отличен от нуля, поэтому можем заявить, что наша прямая будет начинаться не в начале координат, а смещена на -1.4 по оси y. $b_1$ у Log_GDP_per_capita значимо отличен от нуля, пэтому наша прямая будет иметь наклон -- а это значит, что с увеличением Log_GDP_per_capita на 1 зависимая переменная Life_Ladder будет увеличиваться на  0.74!
+
+
+Чему равен $R^2$? Он равен 0.61, что очень хороший результат. То есть, 61% изменчивости наших данных по уровню стастья Life_Ladder определяются уровнем покупапательской способнсти Log_GDP_per_capita!
+
+Уравнение регрессионной прямой я теперь могу записать так:
+
+<p align="center">$\hat Life\_Ladder = -1.4 + 0.74 \times Log\_GDP\_per\_capita$ </p>
+
+Давайте теперь визуалзируем нашу регрессионную прямую
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>% 
+  ggplot(aes(x = Log_GDP_per_capita, y = Life_Ladder)) +
+  geom_point(color = "#355C7D", size = 1, alpha = 0.5) +
+  geom_smooth(method = 'lm', color = "violet") +
+  theme_minimal()
+```
+
+Красота!
+
+### Линейная регрессия с несколькими предикторами (факторами)
+
+Все то же самое, но теперь возьмем в модель второй предиктор -- Freedom_to_make_life_choices.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>%
+  lm(Life_Ladder ~ Log_GDP_per_capita + Freedom_to_make_life_choices, .) -> lm_model3_multy
+lm_model3_multy
+summary(lm_model3_multy)
+```
+
+Проверка допущений
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+plot(lm_model3_multy, 1)
+plot(lm_model3_multy, 2)
+```
+
+Теперь нужно проверить еще допущение об отсутствии мультиколлинеарности -- что среди предикторов (НП) нет сильной корреляции друг с другом, иначе наша модель будет немного бессмысленна. Проверять будем с помощью функции vif(), коэффициента вздутия дисперсии. Показатели довольно условные, но считается, если значения больше 5 -- то это очень сильная корреляция между переменными, и нужно удалить сильно коррелирующую переменную.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+car::vif(lm_model3_multy)
+```
+У нас показания vif довольно низкие, поэтому ничего не будем менять.
+
+Далее можем проинтерпретировать результаты (все коэффициенты значимы) и записать уравнение регрессионной прямой.
+
+<p align="center">$\hat Life\_Ladder = -2.09 + 0.64 \times Log\_GDP\_per\_capita + 2.15  \times Freedom\_to\_make\_life\_choices$  </p>
 
 
 ## Задания после семинара 7 {#tasks_sem7}
 
-1. Отобрать переменные, подходящие для построения линейной регрессии, в данных `whr_tests_hw.csv` 
-2. Построить линейную регрессию на этих переменных, с одним фактором (НП)
-3. Построить линейную регрессию на этих переменных, но уже хотя бы с двумя факторами (НП)
-4. Построить диагностические графики для каждой модели: насколько равной получилась дисперсия остатков для этих моделей? Можно ли доверять результатом этих моделей?
-5. Определеить, какая модель лучше объясняет данные (вариативность ЗП)?
+1. Отберите переменные, подходящие для построения линейной регрессии, в данных `whr_tests_hw.csv` 
+2. Постройте линейную регрессию на этих переменных, с одним фактором (НП)
+3. Постройте линейную регрессию на этих переменных, но уже хотя бы с двумя факторами (НП)
+4. Постройте диагностические графики для каждой модели: насколько равной получилась дисперсия остатков для этих моделей? Можно ли доверять результатом этих моделей?
+5. Определеите, какая модель лучше объясняет данные (то есть вариативность ЗП)?
+6. Запишите уравнение линейной регрессии для обеих моделей.
