--- a/11-kateg.Rmd
+++ b/11-kateg.Rmd
@@ -1,6 +1,18 @@
 #  Анализ категориальных данных {#stats_criteria_categ} 
 
+До этого мы все время работали с линейными моделями, где целевая (зависимая) переменная была количественной. И линейные регрессионные модели, и ANOVA модели относятся к **общим линейным омделям (general linear models)**. Но что делать, если цеелвая переменнаая -- категориальная? Уже нельзя строить линейные модели? Общие линейные -- нет, а обобщенные -- можно! Модели с категориальными предикторами включаются в обобщенные линейные модели generalized linear modela (не перепутайте...)
+
 ## Логистическая регрессия
+
+К логистической регрессии относится семейство моделей, где целевая переменная может принимать значения 1 или 0. То есть она принадлежит [распределению Бернулли](#distributions). Можно поизучать его на шайниапп, котрый сделал Антн Ангельгардт https://angelgardt.shinyapps.io/binomial_app/
+
+Но если мы посмотрим на классическое уравнение регрессии, можем заметить проблему:
+
+<p align="center">$\hat y = b_0 + b_1 \times x_1 + b_2  \times x_2$  </p>
+
+В левой части уравнения у нас стоят значения {1;0} , когда как в правой -- множество непрерывных значений от минус бесконечности до бесконечности.
+
+Чтобы ее решить, перейдем сначала к вероятностям:
 
 ```{r, eval=TRUE, echo = FALSE, message = FALSE}
 library(tidyverse)
