--- a/13-data_analysis_R.Rmd
+++ b/13-data_analysis_R.Rmd
@@ -1362,3 +1362,34 @@ car::vif(lm_model3_multy)
 4. Постройте диагностические графики для каждой модели: насколько равной получилась дисперсия остатков для этих моделей? Можно ли доверять результатом этих моделей?
 5. Определеите, какая модель лучше объясняет данные (то есть вариативность ЗП)?
 6. Запишите уравнение линейной регрессии для обеих моделей.
+
+## Логистическая регрессия
+
+Перейдем от линейной регрессии к [логистической](#logreg). Сначала вспомним, что это за метод, и когда используется -- он используется, когда ЗП не количественная, а категориальная, и, как правило, имеет две градации. Это самый классический случай логистической регрессии, хотя ЗП в ней может иметь и большее количество градаций, чем две -- тогда это будет уже *мультиномиальная логистическая регрессия*. На лог регрессии построено все машинное обучение -- задачи, в которых нужно определить, относится ли изображение к определенному шаблону (например, распознавание текста), является ли кредитный заемщик благонадежным для выдачи кредиты (скоринговые модели в банках) и тд используют именно этот метод. 
+
+Мы рассмотрим его на все том же примере наших данных с World Happiness Report. Они не очень подходят для этого метода, поэтому задача будет немного искусственной -- попроуем предсказать, будет ли попадать страна в первую или вторую половину рейтнга по уровню счастья (мы создавали специальную переменную для этого). Сначала я перекодирую эту переменную в 1 и 0, так как лог регрессия работает с численными значениями 0 и 1.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>%
+  mutate(mean_position_bi = ifelse(mean_position == "upper", 1, 0)) -> whr_tests_hw
+```
+
+Сначала построим самую простую модель, в которую будет входить только интерцепт. Эта модель, по сути, аналог хи квадрата -- не имея никаких предикторов оценить, попадет ли страна в первую или вторую половину рейтинга, чисто на основании частоты встречаемости стран из первой и второй половины? Конкретно в этом примере частоты будут примерно одинаковыми, но прицнип работы этой модели примерно такой.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+table(whr_tests_hw$mean_position)
+
+whr_tests_hw %>%
+  glm(mean_position_bi ~ 1, data = ., family = binomial) -> lm_model_log1
+summary(lm_model_log1)
+
+log(75/78)
+
+# log(p/1-p) = intercept
+```
+Усложним модель и добавим в нее ВВП на душу населения в качестве предиктора
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr_tests_hw %>%
+  glm(mean_position_bi ~ Log_GDP_per_capita, ., family = binomial) -> lm_model_log2
+summary(lm_model_log2)
+```
