--- a/11-kateg.Rmd
+++ b/11-kateg.Rmd
@@ -14,32 +14,23 @@
 
 Чтобы ее решить, перейдем сначала к вероятностям: вместо значений 0 и 1 будем использовать вероятность для, например, 1. 
 
-<p align="center">$p_1= b_0 + b_1 \times x_1$,
-$p_1 \in [0;1] $</p>
+<p align="center">$p_1= b_0 + b_1 \times x_1$,</p>
+<p align="center">$p_1 \in [0;1]$</p>
 
 Уже лучше, но мы все еще остались в границах от 0 до 1. Чтобы все-таки превратить это уравнение в уже привычную нам линейную регрессию с количественной ЗП, сделаем *логарифмическую трансформацию шансов* -- перейдем от вероятности к шансам для каждого исхода, 0 и 1, и посчитаем логарифм от них. Вероятность наступления исхода тогда станет обратной этому логарифму величиной. 
 
-<p align="center">$odds_1 = \frac{p_1}{p_0} = \frac{p_1}{1 - p_1}$,
-$p_1 \in [0;1] $</p>
+<p align="center">$odds_1 = \frac{p_1}{p_0} = \frac{p_1}{1 - p_1}$,</p>
+<p align="center">$p_1 \in [0;1]$</p>
 
-<p align="center">$ln(odds_1) = logit(p_1) = ln(\frac{p_1}{1 - p_1}) = b_0 + b_1 \times x_1$,
-$p_1 = \frac{e^{b_0 + b_1 x}}{1 + e^{b_0 + b_1 x}}$,
-$ln(\frac{p_1}{1 - p_1}) \in (-\infty;\infty) $</p>
+<p align="center">$ln(odds_1) = logit(p_1) = ln(\frac{p_1}{1 - p_1}) = b_0 + b_1 \times x_1$,</p>
+<p align="center">$p_1 = \frac{e^{b_0 + b_1 x}}{1 + e^{b_0 + b_1 x}}$,</p>
+<p align="center">$ln(\frac{p_1}{1 - p_1}) \in (-\infty;\infty)$</p>
 
 Здесь сильно упрощена математика, вслед за [курсом Анатолия Карпова на степике](https://stepik.org/course/524) не будем вдаваться в подробности. Здесь важно, что мы постарались применить одинаковое преобразование к обеим частям уравнения, поэтому вероятность теперь считается по функции с экспонентой (эта функция, к слову, очень важна в машинном обучении и называется сигма-функцией или сигмоидой из-за ее вида) -- то есть, по определению логарифма, это показатель степени, в которую нужно возвести основание логарифма, чтобы получить данное число ($ln(p_1) = b_0 + b_1 \times x_1$).
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
 knitr::include_graphics("docs/images/Logistic-curve.svg.png")
-```
-
-
-Построим несколько моделей логистичекой регрессии для World Happiness Report. Буду строить модели для переменной, которая показывает, попадает ли страна по уровню счастья в первую или вторую половину.
-
-```{r, eval=FALSE, echo = FALSE, message = FALSE}
-library(tidyverse)
-whr_tests_hw %>%
-  mutate(mean_position_bi = ifelse(mean_position == "upper", 1, 0)) -> whr_tests_hw
 ```
 
 Сначала построим просто модель только с интерсептом, которая будет показывать, каковы шансы, что студент заплатит за курс на Udemy сами по себе, без учета каких-либо переменных -- то есть, по сути, это тот же самый анализ, что и хи-квадрат -- мы берем только частоты и строим на них модель.
@@ -66,7 +57,7 @@ udemy_sample %>%
   glm(is_paid ~1, ., family = binomial) ->logmodel1
 summary(logmodel1)
 ```
-Интерсепт здесь получился равен ```coef()``` -- и есть натуральный логарифм шансов для оплаты. Посчитаем саму вероятность:
+Интерсепт здесь получился равен `r coef(logmodel1)` -- и есть натуральный логарифм шансов для оплаты. Посчитаем саму вероятность:
 $p = \frac{exp^{26.56}}{1+exp^{26.56}}$
 
 Это число получилось равно 692204438686. То есть, шансы, что студенты НЕ заплят за курс (0) весьма высокие...
